--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV de [Tu Nombre]</title>
+    <title>CV de Miguel Bourdette Collado</title>
     <style>
         body {
             font-family: Arial, sans-serif;
