--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Miguel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV de [Tu Nombre]</title>
     <link rel="stylesheet" href="styles.css">
@@ -28,7 +27,7 @@
 
         h1,
         h2 {
-            color: #0056b3;
+            color: #53c501;
         }
 
         p,
