--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0;
             padding: 0;
             line-height: 1.6;
-            color: #333;
+            color: #f9f8f8;
             background-color: grey;
         }
 
@@ -27,7 +27,7 @@
 
         h1,
         h2 {
-            color: #53c501;
+            color: #018cffc4;
         }
 
         p,
@@ -53,7 +53,7 @@
         }
 
         section {
-            background-color: rgb(217, 217, 217);
+            background-color: rgb(74, 73, 73);
             padding-left: 8px;
             padding-right: 8px;
             border-radius: 10px;
