--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0;
             padding: 0;
             line-height: 1.6;
-            color: #f9f8f8;
+            color: #333;
             background-color: grey;
         }
 
@@ -25,9 +25,9 @@
             background: #fff;
         }
 
-        h1,
+
         h2 {
-            color: #ffffffc4;
+            color: #000000;
         }
 
         p,
@@ -53,7 +53,7 @@
         }
 
         section {
-            background-color: rgb(74, 73, 73);
+            background-color: rgb(218, 218, 218);
             padding-left: 8px;
             padding-right: 8px;
             border-radius: 10px;
