--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
 
         <section>
             <h2>Contacto</h2>
-            <p>Email: <a href="mailto:miguel@gmail.com">miguel@gmail.com</a></p>
+            <p>Email: miguel@gmail.com</p>
         </section>
     </div>
 
     <footer class="footer">
         <p>&copy; 2024 Miguel Bourdette Collado. Todos los derechos reservados.</p>
     </footer>
-    <script src="scripts.js" defer></script>
+
 </body>
 
 </html>
