--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="description" content="Miguel">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV de [Tu Nombre]</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>CV de Miguel</title>
     <style>
         body {
             font-family: Arial, sans-serif;
